<resources>
    <string name="app_name">ServiceExpress</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="service_express">Service Express</string>
    <string name="aun_no_estas_registrado">¿Aun no estas registrado?</string>
    <string name="registrate">Registrate</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">registrarse</string>
    <string name="todo">TODO</string>
    <string name="agregar_tienda">Agregar Tienda</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="nombre">Nombre</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="agregar_locacion">Agregar Locacion</string>
    <string name="telefono">Telefono</string>
    <string name="title_activity_user_profile">user_profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mi_servicio">Mi servicio</string>
    <string name="servicios">Servicios</string>
    <string name="mis_solicitudes">Mis Solicitudes</string>
    <string name="title_activity_near_services">Map</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="err_email">No es un email valido</string>
    <string name="err_empty">Campo requerido</string>
    <string name="err_phone">No es un formato de telefono valido</string>
    <string name="err_hour">No es un formato de hora valido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
