<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    tools:context=".register">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="377dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/white_rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/ya_tienes_una_cuenta"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/button4" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="344dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editText4"
            app:layout_constraintStart_toStartOf="@+id/editText4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            android:text="@string/inicia_sesion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4" />

        <Button
            android:id="@+id/button4"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/registrarse"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</android.support.constraint.ConstraintLayout>